PCS BAckup 26Dec2023/Backup-Source/objects/Teams_Credentials__mdt.object
<CustomObject>
    <fields>
        <fullName>Notification_Body__c</fullName>
        <label>Notification Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Send_Notification_URL__c</fullName>
        <label>Send Notification URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Token_URL__c</fullName>
        <label>Token URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>grant_type__c</fullName>
        <label>grant_type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>resource__c</fullName>
        <label>resource</label>
        <type>TextArea</type>
    </fields>
    <label>Teams Credentials</label>
    <pluralLabel>Teams Credentials</pluralLabel>
</CustomObject>